--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ CommProtocolBackend/.vs/
 TCPstuff/node_modules/
 
 TCPstuff/package-lock\.json
+
+BackendCodeblock/CommProtocolBackend/CommProtocolBackend/\.idea/
